# better_ptr

./: .clang-format  CMakeLists.txt  LICENSE  README.md
inc/better_ptr/: better_ptr.hpp  box.hpp  common.hpp  pointer.hpp  weak.hpp
test/: CMakeLists.txt
test/src/: pointer.cpp
